testsuite/tests/parser/should_fail/T19736.hs
module T19736 where

f = \ -> 5
