testsuite/tests/parser/should_fail/T19736.stderr

T19736.hs:3:5: error:
    A lambda requires at least one parameter
